# chris-dev-1

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
model-parameters/: model_metadata.h  model_variables.h
tflite-model/: tflite-resolver.h
